syntax = "proto3";
package node;
option go_package = "github.com/ttdung/paymentchannel";

import "google/protobuf/struct.proto";

enum ConnectionStatus {
  OPEN = 0;
  CLOSE = 1;
}


enum MsgType {
  ERROR = 0;
  CONFIRM_OPENCHANNEL = 1;
  RESPONSEDATA = 2;
  REQ_PAYMENT = 3;
  REG_CHANNEL = 4;
  MSG_CLOSE = 5;
}

service Node {
  rpc RequestOpenChannel(MsgReqOpenChannel) returns (MsgResOpenChannel) {};
  rpc ConfirmOpenChannel(MsgConfirmOpenChannel) returns(MsgResConfirmOpenChannel) {};
  rpc RequestPayment(MsgReqPayment) returns (MsgResPayment) {};
  rpc ConfirmPayment(MsgConfirmPayment) returns (MsgResConfirmPayment) {};
//  rpc Register(MsgRegisterRequest) returns (MsgRegisterResponse) {};
  rpc OpenStream(stream Msg) returns (stream Msg) {};
}

message Msg {
  MsgType Type = 1;
  bytes Data = 2;
}

message MsgRequest {
  string cmd = 1;
  google.protobuf.Struct data = 2;
}

message MsgResponse {
  uint32 code = 1;
  google.protobuf.Struct data = 2;
}

message MsgReqPayment {
  string ChannelID = 1;
  uint64 SendAmt = 2;
  uint64 RecvAmt = 3;
  string Hashcode = 4;
  string CommitmentID = 5;
  string Commitment_sig = 6;
}

message MsgResPayment {
  string ChannelID = 1;
  string CommitmentID = 2;
  string Commitment_sig = 3;
  string SecretPreComm = 4;
}

message MsgConfirmPayment {
  string ChannelID = 1;
  string CommID = 2;
  string SecretPreComm = 3;
}

message MsgResConfirmPayment {
  string ChannelID = 1;
  string CommID = 2;
  MsgType type = 3;
  string Data = 4;
}

message MsgConfirmOpenChannel {
  MsgType Type = 1;
  string ChannelID = 2;
  string Commitment_sig = 3;
  string OpenChannelTx_sig = 4;
}

message MsgResConfirmOpenChannel {
  uint32 Code = 2;
  string TxHash = 3;
  string Data = 4;
  uint64 TxFee = 5;
}

message MsgReqOpenChannel {
  string Version = 1;
  string PartA_Addr = 2;
  string PartB_Addr = 3;
  string PubkeyA = 4;
  uint64 Deposit_Amt = 5;
  string Denom = 6;
  string Hashcode = 7;
  string peerNodeAddr = 8; // IP:port
  uint64 FirstSend = 9;
  uint64 FirstRecv = 10;
}

message MsgResOpenChannel {
  string Pubkey = 1;
  uint64 Deposit_Amt = 2;
  string Denom = 3;
  string Hashcode = 4;
  string Commitment_Sig = 5;
  uint64 Nonce = 6;
}



